# sqlite-cmake

./: CMakeLists.txt  REAMDE.md  build_vs2022.bat
cmake/: common.cmake
src/: sqlite3.def
